--- a/form/form-style.css
+++ b/form/form-style.css
@@ -1,9 +1,15 @@
 
-
 input[type] {
     margin: 10px;
 }
 
 fieldset{
     margin-bottom: 10px;
+}
+
+button{
+    margin-top: 10px;
+}
+a{
+    font-size: 0.7rem;
 }
