--- a/form/register-style.css
+++ b/form/register-style.css
@@ -20,7 +20,7 @@ table {
 }
 
 th {
-    background-color: rgb(186, 229, 245);
+    background-color: rgb(170, 192, 200);
     text-align: left;
     vertical-align: top;
     border: 2px solid black;
@@ -33,7 +33,7 @@ td {
 }
 
 button {
-    background-color: aliceblue;
+    background-color: rgb(159, 192, 221);
     margin-top: 5px;
     font-size: 1rem;
 }
@@ -44,4 +44,12 @@ input {
 
 textarea {
     margin: 7px;
+}
+
+.b{
+    background-color: rgb(187, 69, 69);
+}
+
+.a{
+    font-size: 10px;
 }
